[gd_scene load_steps=3 format=2]

[ext_resource path="res://DialogueSystem.gd" type="Script" id=1]
[ext_resource path="res://buttons.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -224.0
margin_right = 512.0
color = Color( 0.175781, 0.175781, 0.175781, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -100.0
margin_right = 500.0
margin_bottom = 100.0
bbcode_enabled = true
scroll_active = false

[node name="Choices" type="Control" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Position2D" type="Position2D" parent="ColorRect/Choices"]
position = Vector2( 30.8175, 83.3866 )

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -357.0
margin_bottom = 376.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0

[node name="buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="next" type="Button" parent="buttons"]
margin_left = 331.935
margin_top = 350.334
margin_right = 400.935
margin_bottom = 370.334
focus_mode = 0
size_flags_horizontal = 15
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Continue"

[node name="clear" type="Button" parent="buttons"]
margin_left = 869.603
margin_top = 333.492
margin_right = 938.603
margin_bottom = 353.492
focus_mode = 0
size_flags_horizontal = 15
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Clear"

[node name="set_var" type="Button" parent="buttons"]
margin_left = 752.761
margin_top = 333.492
margin_right = 843.761
margin_bottom = 353.492
focus_mode = 0
size_flags_horizontal = 15
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "var1 = true"

[node name="initiate_a" type="Button" parent="buttons"]
margin_left = 10.0
margin_top = 25.1402
margin_right = 71.0
margin_bottom = 45.1402
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Initiate 'just_text' dialogue"

[node name="initiate_b" type="Button" parent="buttons"]
margin_left = 209.211
margin_top = 25.1402
margin_right = 391.211
margin_bottom = 45.1402
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Initiate 'question' dialogue"

[node name="initiate_c" type="Button" parent="buttons"]
margin_left = 409.294
margin_top = 25.1402
margin_right = 590.294
margin_bottom = 45.1402
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Initiate 'complex' dialogue"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="buttons/next" to="buttons" method="press_next"]
[connection signal="pressed" from="buttons/clear" to="buttons" method="clear"]
[connection signal="pressed" from="buttons/set_var" to="buttons" method="set_var"]
[connection signal="pressed" from="buttons/initiate_a" to="buttons" method="init_a"]
[connection signal="pressed" from="buttons/initiate_b" to="buttons" method="init_b"]
[connection signal="pressed" from="buttons/initiate_c" to="buttons" method="init_c"]
